# xling-grpo-sub3b

./: .editorconfig  .gitignore  .mailmap  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IEEE_ACCESS_SUBMISSION_GUIDE.md  LICENSE  Makefile  PAPER_CHECKLIST.md  README.md  VERIFICATION.md  pyproject.toml
.github/: pull_request_template.md
configs/: accelerate_single_a100.yaml  base.yaml  eval.yaml  grpo_a2_vi.yaml  grpo_a3_enlang.yaml  grpo_a4_const_bias.yaml  grpo_en.yaml  grpo_enlang.yaml  grpo_vi.yaml  reproduce_open_rs.yaml  sft_llama3b.yaml  sft_qwen15b.yaml  sft_qwen3b.yaml
data/: __init__.py  decontaminate.py  filter_7k.py  prepare_metamath_vi.py  prepare_numinamath.py  prepare_open_rs.py
docs/: PAPER_CHECKLIST.md  PAPER_V2_PIPELINE.md  README.md
paper/: MODEL_CARD.md  TWITTER_THREAD.md  appendix.tex  build_arxiv_bundle.sh  main.tex  rebuttal_prep.md  refs.bib
reports/: CHECKPOINT_2026-05-05.md  FINAL_PHASE_REPORT.md  README.md  W1_2026-05-15_VPS_EXECUTION.md  W1_PAPER_VERIFICATION_2026-05-16.md  W1_VPS_INVENTORY_2026-05-16.md  phase0_00_summary_critical_fixes.md  phase0_01_datasets_verification.md  phase0_02_trl_api_research.md  phase0_03_open_rs_reproduction.md  phase2_01_rewards.md  phase2_02_data.md  phase2_03_eval.md  phase2_04_trainer_plan.md  phase5_validation.md  phase6_polish_additions.md  phase7_vastai_execution.md  phase8_pivot_decision.md  phase8_results_A1_A2_A3.md
results/: bootstrap_ci.csv  master.csv
scripts/: aggregate_phase9.py  build_ieee_submission.sh  data_integrity_pipeline.py  eval_all.sh  make_tables.py  phase9_4_mgsm.sh  (+19 more)
(+201 files in other folders)
